@@ -41,6 +41,11 @@ Mon Aug 14 11:49:12 2000  Jeffrey A Law  (law@cygnus.com)
 	* symbols.c: Fix formatting.
 	* expr.c: Likewise.
 
+Wed Aug  9 16:28:21 EDT 2000	Diego Novillo <dnovillo@cygnus.com>
+
+	* tc-i386.c (md_assemble): Skip suffix check if the opcode modifier
+	has the IgnoreSize bit set.
+
 2000-08-09  Alan Modra  <alan@linuxcare.com.au>
 
 	From  Rodney Brown  <RodneyBrown@mynd.com>
